--- a/index.html
+++ b/index.html
@@ -3,27 +3,87 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Coiny&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Today I Learned</title>
   </head>
   <body>
-    <h1>Today I Learned</h1>
-    <ul>
-      <li>
-        <p>
-          React is being developed by Meta (formerly facebook)
-          <a href="#">Source</a>
-          <span>#technology#</span>
-        </p>
-      </li>
-      <li>
-        <p>
-          Millennial dads spend 3 times as much time with their kids than their
-          fathers spent with them. In 1982, 43% of fathers had never changed a
-          diaper. Today, that number is down to 3%
-          <a href="#">Source</a>
-          <span>#society#</span>
-        </p>
-      </li>
-    </ul>
+    <header>
+      <img src="logo.png" alt="Logo" height="68" width="68" />
+      <h1>Today I Learned</h1>
+      <button>Share a fact</button>
+    </header>
+    <form>
+      <input type="text" placeholder="Share a fact with the world..." />
+      <span>200</span>
+      <input type="text" placeholder="Trustworthy source..." />
+      <select name="" id="">
+        <option value="">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="science">Science</option>
+        <option value="finance">Finance</option>
+      </select>
+      <button>Post</button>
+    </form>
+    <main>
+      <aside>
+        <ul>
+          <li>
+            <button>All</button>
+          </li>
+          <li>
+            <button>Technology</button>
+          </li>
+          <li>
+            <button>Science</button>
+          </li>
+        </ul>
+      </aside>
+      <section>
+        <ul>
+          <li>
+            <p class="fact">
+              React is being developed by Meta (formerly facebook)
+              <a href="https://opensource.fb.com/" target="_blank">Source</a>
+              <span class="tag">#technology#</span>
+            </p>
+            <div>
+              <button>👍 24</button>
+              <button>🤯 9</button>
+              <button>⛔️ 4</button>
+            </div>
+          </li>
+          <li>
+            <p class="fact">
+              Millennial dads spend 3 times as much time with their kids than
+              their fathers spent with them. In 1982, 43% of fathers had never
+              changed a diaper. Today, that number is down to 3%
+              <a
+                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                target="_blank"
+                >Source</a
+              >
+              <span class="tag">#society#</span>
+            </p>
+            <div>
+              <button>👍 11</button>
+              <button>🤯 2</button>
+              <button>⛔️ 0</button>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
