--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <title>Today I Learned</title>
   </head>
   <body>
-    <header>
-      <img src="logo.png" alt="Logo" height="68" width="68" />
-      <h1>Today I Learned</h1>
+    <header class="header">
+      <div class="logo">
+        <img src="logo.png" alt="Logo" height="68" width="68" />
+        <h1>Today I Learned</h1>
+      </div>
       <button>Share a fact</button>
     </header>
     <form class="fact-form">
@@ -52,11 +54,13 @@
       </aside>
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">Source</a>
-              <span class="tag">#technology#</span>
+              <span class="tag" style="background-color: #3b82f6"
+                >#technology#</span
+              >
             </p>
             <div>
               <button>👍 24</button>
@@ -64,8 +68,8 @@
               <button>⛔️ 4</button>
             </div>
           </li>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -74,7 +78,9 @@
                 target="_blank"
                 >Source</a
               >
-              <span class="tag">#society#</span>
+              <span class="tag" style="background-color: #eab308"
+                >#society#</span
+              >
             </p>
             <div>
               <button>👍 11</button>
