--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </select>
       <button>Post</button>
     </form>
-    <main>
+    <main class="main">
       <aside>
         <ul>
           <li>
@@ -58,11 +58,11 @@
             <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">Source</a>
-              <span class="tag" style="background-color: #3b82f6"
-                >#technology#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍 24</button>
               <button>🤯 9</button>
               <button>⛔️ 4</button>
@@ -78,11 +78,9 @@
                 target="_blank"
                 >Source</a
               >
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍 11</button>
               <button>🤯 2</button>
               <button>⛔️ 0</button>
