--- a/index.html
+++ b/index.html
@@ -19,75 +19,89 @@
     <title>Today I Learned</title>
   </head>
   <body>
-    <header class="header">
-      <div class="logo">
-        <img src="logo.png" alt="Logo" height="68" width="68" />
-        <h1>Today I Learned</h1>
-      </div>
-      <button>Share a fact</button>
-    </header>
-    <form class="fact-form">
-      <input type="text" placeholder="Share a fact with the world..." />
-      <span>200</span>
-      <input type="text" placeholder="Trustworthy source..." />
-      <select name="" id="">
-        <option value="">Choose category:</option>
-        <option value="technology">Technology</option>
-        <option value="science">Science</option>
-        <option value="finance">Finance</option>
-      </select>
-      <button>Post</button>
-    </form>
-    <main class="main">
-      <aside>
-        <ul>
-          <li>
-            <button>All</button>
-          </li>
-          <li>
-            <button>Technology</button>
-          </li>
-          <li>
-            <button>Science</button>
-          </li>
-        </ul>
-      </aside>
-      <section>
-        <ul>
-          <li class="fact">
-            <p>
-              React is being developed by Meta (formerly facebook)
-              <a href="https://opensource.fb.com/" target="_blank">Source</a>
-            </p>
-            <span class="tag" style="background-color: #3b82f6"
-              >#technology#</span
-            >
-            <div class="vote-buttons">
-              <button>👍 24</button>
-              <button>🤯 9</button>
-              <button>⛔️ 4</button>
-            </div>
-          </li>
-          <li class="fact">
-            <p>
-              Millennial dads spend 3 times as much time with their kids than
-              their fathers spent with them. In 1982, 43% of fathers had never
-              changed a diaper. Today, that number is down to 3%
-              <a
-                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
-                target="_blank"
-                >Source</a
+    <div class="container">
+      <header class="header">
+        <div class="logo">
+          <img src="logo.png" alt="Logo" />
+          <h1>Today I Learned</h1>
+        </div>
+        <button class="btn btn-large">Share a fact</button>
+      </header>
+      <form class="fact-form">
+        <input type="text" placeholder="Share a fact with the world..." />
+        <span>200</span>
+        <input type="text" placeholder="Trustworthy source..." />
+        <select name="" id="">
+          <option value="">Choose category:</option>
+          <option value="technology">Technology</option>
+          <option value="science">Science</option>
+          <option value="finance">Finance</option>
+        </select>
+        <button class="btn btn-large">Post</button>
+      </form>
+      <main class="main">
+        <aside>
+          <ul>
+            <li class="cat">
+              <button class="btn btn-all-cat">All</button>
+            </li>
+            <li class="cat">
+              <button class="btn btn-cat" style="background-color: #3b82f6">
+                Technology
+              </button>
+            </li>
+            <li class="cat">
+              <button class="btn btn-cat" style="background-color: #16a34a">
+                Science
+              </button>
+            </li>
+          </ul>
+        </aside>
+        <section>
+          <ul>
+            <li class="fact">
+              <p>
+                React is being developed by Meta (formerly facebook)
+                <a
+                  class="source"
+                  href="https://opensource.fb.com/"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #3b82f6"
+                >#technology#</span
               >
-            </p>
-            <span class="tag" style="background-color: #eab308">#society#</span>
-            <div class="vote-buttons">
-              <button>👍 11</button>
-              <button>🤯 2</button>
-              <button>⛔️ 0</button>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+              <div class="vote-buttons">
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔️ 4</button>
+              </div>
+            </li>
+            <li class="fact">
+              <p>
+                Millennial dads spend 3 times as much time with their kids than
+                their fathers spent with them. In 1982, 43% of fathers had never
+                changed a diaper. Today, that number is down to 3%
+                <a
+                  class="source"
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #eab308"
+                >#society#</span
+              >
+              <div class="vote-buttons">
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔️ 0</button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
